# api

./: .env.example  .gitignore  Cargo.toml  pyproject.toml
api/authentication/: views.py
src/: database.rs  main.rs  settings.rs
src/common/: database.rs
src/role/: model.rs  view.rs
src/user/: controller.rs  mod.rs  model.rs  repository.rs  service.rs  view.rs
