[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# tokio no TLS
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.37", features = ["full"] }
dirs = "5.0"
uuid = { version = "1.4", features = ["v4"] }
anyhow = "1.0"
thiserror = "2.0.9"
